recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not found: value lenght
avance(lenght)
       ^Spiral:7: error: not found: value setps
	setps=steps-1
        ^Spiral:8: error: reassignment to val
	length=length+increment
              ^